NginxForMetalLB.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
 # annotations:
  #  metallb.universe.tf/address-pool: production-public-ips
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
#  loadBalancerIP: 10.110.19.240
