micros-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: micros2-node-port
spec:
  type: NodePort
  ports:
      - port: 3000
        targetPort: 9090
        nodePort: 31515
  selector: 
      component: micros2
