Ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: micro-ingress
  annotations:
#    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    backend: 
        serviceName: default-http-backend
        servicePort: 80
    rules: 
    #- host: ms
    - http:
        paths:
        - path: /ms1/guest/profile/?(.*)
          backend:
            serviceName: ms1
            servicePort: 9091
        - path: /ms2/guest/address/?(.*)
          backend:
            serviceName: ms2
            servicePort: 9092
