micro-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: micro-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.org/rewrites: /
spec:
    backend: 
        serviceName: default-http-backend
        servicePort: 80
    rules: 
    - host: sandeep.example.com
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx-deploy-main
            servicePort: 80        
        - path: /ms1
          backend:
            serviceName: ms1
            servicePort: 9091
        - path: /ms2
          backend:
            serviceName: ms2
            servicePort: 9092
